--- a/source/estilos/style.css
+++ b/source/estilos/style.css
@@ -171,7 +171,6 @@ aside h3 {
 
 
 aside ul {
-    list-style-type: '\1F5F8\00A0';
     list-style-position: inside;
     columns: 2;
     padding: 10px;
@@ -179,6 +178,10 @@ aside ul {
         columns: 1;
     }
 }
+
+aside li::marker{
+    content: "🗸";
+} 
 
 aside a{
     color: black;
