--- a/source/estilos/style.css
+++ b/source/estilos/style.css
@@ -45,7 +45,7 @@ main {
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 0 0 10px 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
+    box-shadow: 0px 0px 10px #00000070;
 }
 
 main h1{
