--- a/d014/assets/estilos/style.css
+++ b/d014/assets/estilos/style.css
@@ -15,7 +15,7 @@ html, body {
 body {
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 main {
@@ -50,13 +50,23 @@ section#iconeRedes img:hover {
 }
 
 section#iconeRedes {
-    text-align: right;
+    position: absolute;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    padding: 10px;
+
+    @media (width < 482px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
 
 iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 267px;
-    height: 471px;
+    width: 86%;
+    height: 75%;
 }
